--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <footer>
       <a href="index3.html">
       <h2>
-      <button class="btn btn-primary">想找到肥菊和拉夫吗</button></a>
+      <button class="btn btn-primary">想找到肥橘和拉夫吗</button></a>
 
     </h2>
 </footer>
