--- a/index3.html
+++ b/index3.html
@@ -18,7 +18,7 @@
 <img src="https://static.pexels.com/photos/50988/ape-berber-monkeys-mammal-affchen-50988.jpeg">
 <img src="feiju.jpg">
 
-
+	<p><a href="index.html">GO BACK</a></p>
 
 </div>
 
